--- a/index.css
+++ b/index.css
@@ -1,3 +1,24 @@
 h1 {
-    color: brown;
+    color: rgb(3, 31, 5);
+    margin-top: 50px;
+    text-align: center;
+}
+.navigation {
+    display: flex;
+    background-color: green;
+    border: 1px;
+    border-color: black;
+    border-radius: 100px;
+    height: 50px;
+    top: 0;
+    position: fixed;
+    width: 98.5vw;
+    left: 0;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+a {
+    text-decoration: none;
+    color: antiquewhite;
 }
