--- a/index.css
+++ b/index.css
@@ -1,7 +1,9 @@
-h1 {
+.header {
     color: rgb(3, 31, 5);
-    margin-top: 50px;
+    margin-top: 100px;
     text-align: center;
+    margin-bottom: 50px;
+
 }
 .navigation {
     display: flex;
@@ -21,4 +23,38 @@ h1 {
 a {
     text-decoration: none;
     color: antiquewhite;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+li {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: left;
+}
+.all-images {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.footer {
+    border: 1px black;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100px;
+    display: flex;
+    border-radius: 30px;
+    background-color: darkgreen;
+}
+.images {
+   border: 1px solid gray;
+   width: 200px;
+   height: 130px;
+   text-align: center;
+   border-radius: 10px;
+   padding: 70px;
+   background-color: rgb(129, 68, 68);
+}
+img {
+    height: 150px;
+    width: 250px;
+}
+
