--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ img {
 
 p {
     color: black;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 body {
