--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@ li {
     height: 50px;
     display: flex;
     border-radius: 15px;
-    background-color: darkgreen;
+    background-color: rgb(25, 82, 25);
     margin-top: 30px;
     bottom: 0;
 }
