--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
     margin-top: 100px;
     text-align: center;
     margin-bottom: 50px;
+    text-decoration: underline;
 
 }
 
@@ -74,6 +75,7 @@ img {
 p {
     color: black;
     font-family: 'Times New Roman', Times, serif;
+    
 }
 
 body {
