--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@
 
 a {
     text-decoration: none;
-    color: antiquewhite;
+    color: rgb(255, 255, 255);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
